--- a/src/main/webapp/app/exercises/file-upload/manage/file-upload-exercise-row-buttons.component.html
+++ b/src/main/webapp/app/exercises/file-upload/manage/file-upload-exercise-row-buttons.component.html
@@ -1,11 +1,16 @@
 <div class="btn-group flex-btn-group-container">
-    <button type="submit" *ngIf="exercise.isAtLeastTutor" [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'scores']" class="btn btn-info btn-sm mr-1">
+    <button
+        type="submit"
+        *ngIf="exercise.isAtLeastTutor || course.isAtLeastTutor"
+        [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'scores']"
+        class="btn btn-info btn-sm mr-1"
+    >
         <fa-icon [icon]="'eye'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="entity.action.scores">Scores</span>
     </button>
     <button
         type="submit"
-        *ngIf="exercise.isAtLeastInstructor"
+        *ngIf="exercise.isAtLeastInstructor || course.isAtLeastInstructor"
         [routerLink]="['/course-management', courseId, exercise.type + '-exercises', exercise.id, 'assessment']"
         class="btn btn-primary btn-sm mr-1"
     >
@@ -14,7 +19,7 @@
     </button>
     <button
         type="submit"
-        *ngIf="exercise.isAtLeastTutor"
+        *ngIf="exercise.isAtLeastTutor || course.isAtLeastTutor"
         [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'participations']"
         class="btn btn-primary btn-sm mr-1"
     >
@@ -32,7 +37,7 @@
     </button>
     <button
         type="submit"
-        *ngIf="exercise.isAtLeastInstructor"
+        *ngIf="exercise.isAtLeastInstructor || course.isAtLeastInstructor"
         [routerLink]="['/course-management', courseId, exercise.type + '-exercises', exercise.id]"
         class="btn btn-info btn-sm mr-1"
     >
@@ -41,7 +46,7 @@
     </button>
     <button
         type="submit"
-        *ngIf="exercise.isAtLeastInstructor"
+        *ngIf="exercise.isAtLeastInstructor || course.isAtLeastInstructor"
         [routerLink]="['/course-management', courseId, exercise.type + '-exercises', exercise.id, 'edit']"
         class="btn btn-primary btn-sm mr-1"
     >
@@ -49,7 +54,7 @@
         <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
     </button>
     <button
-        *ngIf="exercise.isAtLeastInstructor"
+        *ngIf="exercise.isAtLeastInstructor || course.isAtLeastInstructor"
         jhiDeleteButton
         [entityTitle]="exercise.title"
         deleteQuestion="artemisApp.exercise.delete.question"
