--- a/src/main/webapp/app/exercises/quiz/manage/quiz-exercise.component.html
+++ b/src/main/webapp/app/exercises/quiz/manage/quiz-exercise.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h4>
+    <h4 *ngIf="isInExerciseGroup == null">
         <span *ngIf="course && !showHeading">{{ course.title }} - </span><span *ngIf="quizExercises && showHeading">{{ getAmountOfExercisesString(quizExercises) }} </span>
         <span jhiTranslate="artemisApp.quizExercise.home.title">Quiz Exercises</span>
         <button
@@ -33,32 +33,42 @@
                 <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="sortRows.bind(this)">
                     <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon></th>
                     <th jhiSortBy="title"><span jhiTranslate="artemisApp.exercise.title">Title</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon></th>
-                    <th jhiSortBy="status"><span jhiTranslate="artemisApp.quizExercise.status">Status</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon></th>
-                    <th jhiSortBy="releaseDate"><span jhiTranslate="artemisApp.quizExercise.startTime">Start Time</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon></th>
-                    <th jhiSortBy="duration"><span jhiTranslate="artemisApp.quizExercise.duration">Duration</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon></th>
+                    <th jhiSortBy="status" *ngIf="isInExerciseGroup == null">
+                        <span jhiTranslate="artemisApp.quizExercise.status">Status</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="releaseDate" *ngIf="isInExerciseGroup == null">
+                        <span jhiTranslate="artemisApp.quizExercise.startTime">Start Time</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="duration" *ngIf="isInExerciseGroup == null">
+                        <span jhiTranslate="artemisApp.quizExercise.duration">Duration</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
                     <th jhiSortBy="maxScore"><span jhiTranslate="artemisApp.exercise.maxScore">Max Score</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon></th>
-                    <th>{{ 'artemisApp.quizExercise.quizLifecycle' | translate }}</th>
+                    <th *ngIf="isInExerciseGroup == true">{{ 'artemisApp.quizExercise.numberOfQuestions' | translate }}</th>
+                    <th *ngIf="isInExerciseGroup == null">{{ 'artemisApp.quizExercise.quizLifecycle' | translate }}</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let quizExercise of quizExercises; trackBy: trackId">
-                    <td *ngIf="!quizIsOver(quizExercise) || !quizExercise.isAtLeastInstructor">
+                    <td *ngIf="isInExerciseGroup == true">
+                        <span>{{ quizExercise.id }}</span>
+                    </td>
+                    <td *ngIf="isInExerciseGroup == null && (!quizIsOver(quizExercise) || !quizExercise.isAtLeastInstructor)">
                         <a [routerLink]="['/course-management', quizExercise.course?.id, 'quiz-exercises', quizExercise.id, 'edit']">{{ quizExercise.id }}</a>
                     </td>
-                    <td *ngIf="quizIsOver(quizExercise) && quizExercise.isAtLeastInstructor">
+                    <td *ngIf="isInExerciseGroup == null && quizIsOver(quizExercise) && quizExercise.isAtLeastInstructor">
                         <a [routerLink]="['/course-management', quizExercise.course?.id, 'quiz-exercises', quizExercise.id, 're-evaluate']">{{ quizExercise.id }}</a>
                     </td>
                     <td>{{ quizExercise.title }}</td>
-                    <td>
+                    <td *ngIf="isInExerciseGroup == null">
                         <span *ngIf="quizExercise.status === QuizStatus.CLOSED">{{ 'artemisApp.quizExercise.quizStatus.closed' | translate }}</span>
                         <span *ngIf="quizExercise.status === QuizStatus.HIDDEN">{{ 'artemisApp.quizExercise.quizStatus.hidden' | translate }}</span>
                         <span *ngIf="quizExercise.status === QuizStatus.VISIBLE">{{ 'artemisApp.quizExercise.quizStatus.visible' | translate }}</span>
                         <span *ngIf="quizExercise.status === QuizStatus.ACTIVE">{{ 'artemisApp.quizExercise.quizStatus.active' | translate }}</span>
                         <span *ngIf="quizExercise.status === QuizStatus.OPEN_FOR_PRACTICE">{{ 'artemisApp.quizExercise.quizStatus.openForPractice' | translate }}</span>
                     </td>
-                    <td>{{ quizExercise.isPlannedToStart ? (quizExercise.releaseDate | artemisDate: 'long':true) : '-' }}</td>
-                    <td>
+                    <td *ngIf="isInExerciseGroup == null">{{ quizExercise.isPlannedToStart ? (quizExercise.releaseDate | artemisDate: 'long':true) : '-' }}</td>
+                    <td *ngIf="isInExerciseGroup == null">
                         {{ fullMinutesForSeconds(quizExercise.duration) }}
                         <span jhiTranslate="{{ quizExercise.duration % 60 ? 'artemisApp.quizExercise.minutesShort' : 'artemisApp.quizExercise.minutes' }}"></span>
                         <span *ngIf="quizExercise.duration % 60">
@@ -67,8 +77,9 @@
                         </span>
                     </td>
                     <td>{{ quizExercise.maxScore }}</td>
+                    <td *ngIf="isInExerciseGroup == true">{{ quizExercise.quizQuestions?.length }}</td>
                     <td class="text-right">
-                        <div class="btn-group flex-btn-group-container">
+                        <div class="btn-group flex-btn-group-container" *ngIf="isInExerciseGroup == null">
                             <button
                                 type="submit"
                                 (click)="openForPractice(quizExercise.id)"
@@ -104,7 +115,7 @@
                         <div class="btn-group flex-btn-group-container">
                             <div class="btn-group-vertical mr-1 mb-1">
                                 <button
-                                    *ngIf="quizExercise.isAtLeastTutor"
+                                    *ngIf="quizExercise.isAtLeastTutor || course.isAtLeastTutor"
                                     type="submit"
                                     [routerLink]="['/course-management', quizExercise.course?.id, 'quiz-exercises', quizExercise.id, 'preview']"
                                     class="btn btn-success btn-sm mr-1 mb-1"
@@ -113,7 +124,7 @@
                                     <span class="d-none d-md-inline" jhiTranslate="artemisApp.quizExercise.preview">Preview</span>
                                 </button>
                                 <button
-                                    *ngIf="quizExercise.isAtLeastTutor"
+                                    *ngIf="quizExercise.isAtLeastTutor || course.isAtLeastTutor"
                                     type="submit"
                                     [routerLink]="['/course-management', quizExercise.course?.id, 'quiz-exercises', quizExercise.id, 'solution']"
                                     class="btn btn-success btn-sm mr-1 mb-1"
@@ -124,18 +135,18 @@
                             </div>
                             <div class="btn-group-vertical mr-1 mb-1">
                                 <button
-                                    *ngIf="quizExercise.isAtLeastTutor"
+                                    *ngIf="quizExercise.isAtLeastTutor || course.isAtLeastTutor"
                                     type="submit"
-                                    [routerLink]="['/course-management', quizExercise.course?.id, 'quiz-exercises', quizExercise.id, 'quiz-point-statistic']"
+                                    [routerLink]="['/course-management', courseId, 'quiz-exercises', quizExercise.id, 'quiz-point-statistic']"
                                     class="btn btn-info btn-sm mr-1 mb-1"
                                 >
                                     <fa-icon [icon]="'signal'"></fa-icon>
                                     <span class="d-none d-md-inline" jhiTranslate="global.menu.entities.quizStatistic">Statistic</span>
                                 </button>
                                 <button
-                                    *ngIf="quizExercise.isAtLeastTutor"
+                                    *ngIf="quizExercise.isAtLeastTutor || course.isAtLeastTutor"
                                     type="submit"
-                                    [routerLink]="['/course-management', quizExercise.course.id, 'exercises', quizExercise.id, 'scores']"
+                                    [routerLink]="['/course-management', courseId, 'exercises', quizExercise.id, 'scores']"
                                     class="btn btn-info btn-sm mr-1 mb-1"
                                 >
                                     <fa-icon [icon]="'eye'"></fa-icon>
@@ -144,7 +155,7 @@
                             </div>
                             <div class="btn-group-vertical mr-1 mb-1">
                                 <button
-                                    *ngIf="quizExercise.isAtLeastInstructor"
+                                    *ngIf="quizExercise.isAtLeastInstructor || course.isAtLeastInstructor"
                                     type="submit"
                                     (click)="exportQuizById(quizExercise.id, true)"
                                     class="btn btn-primary btn-sm mr-1 mb-1"
@@ -153,21 +164,21 @@
                                     <span class="d-none d-md-inline" jhiTranslate="entity.action.export">Export</span>
                                 </button>
                                 <button
-                                    *ngIf="quizExercise.isAtLeastInstructor"
+                                    *ngIf="quizExercise.isAtLeastInstructor || course.isAtLeastInstructor"
                                     type="submit"
                                     [hidden]="quizIsOver(quizExercise)"
                                     [disabled]="quizExercise.status === QuizStatus.ACTIVE || quizIsOver(quizExercise)"
-                                    [routerLink]="['/course-management', quizExercise.course?.id, 'quiz-exercises', quizExercise.id, 'edit']"
+                                    [routerLink]="['/course-management', courseId, 'quiz-exercises', quizExercise.id, 'edit']"
                                     class="btn btn-primary btn-sm mr-1 mb-1"
                                 >
                                     <fa-icon [icon]="'pencil-alt'"></fa-icon>
                                     <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                                 </button>
                                 <button
-                                    *ngIf="quizExercise.isAtLeastInstructor"
+                                    *ngIf="quizExercise.isAtLeastInstructor || course.isAtLeastInstructor"
                                     type="submit"
                                     [hidden]="!quizIsOver(quizExercise)"
-                                    [routerLink]="['/course-management', quizExercise.course?.id, 'quiz-exercises', quizExercise.id, 're-evaluate']"
+                                    [routerLink]="['/course-management', courseId, 'quiz-exercises', quizExercise.id, 're-evaluate']"
                                     class="btn btn-primary btn-sm mr-1 mb-1"
                                 >
                                     <fa-icon [icon]="'pencil-alt'"></fa-icon>
@@ -176,7 +187,7 @@
                             </div>
                             <div class="btn-group-vertical mr-1 mb-1">
                                 <button
-                                    *ngIf="quizExercise.isAtLeastInstructor"
+                                    *ngIf="isInExerciseGroup == null && quizExercise.isAtLeastInstructor"
                                     jhiDeleteButton
                                     [entityTitle]="quizExercise.title"
                                     [actionType]="ActionType.Reset"
@@ -189,12 +200,12 @@
                                     <fa-icon [icon]="'times'"></fa-icon>
                                 </button>
                                 <button
-                                    *ngIf="quizExercise.isAtLeastInstructor"
+                                    *ngIf="quizExercise.isAtLeastInstructor || course.isAtLeastInstructor"
                                     jhiDeleteButton
                                     [entityTitle]="quizExercise.title"
                                     deleteQuestion="artemisApp.quizExercise.delete.question"
                                     deleteConfirmationText="artemisApp.exercise.delete.typeNameToConfirm"
-                                    (delete)="deleteQuizExercise(quizExercise.id)"
+                                    (delete)="deleteQuizExercise(quizExercise)"
                                     [dialogError]="dialogError$"
                                     id="delete-quiz-{{ quizExercise.id }}"
                                     class="mb-1"
