--- a/src/main/webapp/app/exercises/text/manage/text-exercise/text-exercise-row-buttons.component.html
+++ b/src/main/webapp/app/exercises/text/manage/text-exercise/text-exercise-row-buttons.component.html
@@ -1,13 +1,18 @@
 <div class="btn-group flex-btn-group-container">
     <!-- Scores -->
-    <button *ngIf="exercise.isAtLeastTutor" type="submit" [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'scores']" class="btn btn-info btn-sm mr-1">
+    <button
+        *ngIf="exercise.isAtLeastTutor || course.isAtLeastTutor"
+        type="submit"
+        [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'scores']"
+        class="btn btn-info btn-sm mr-1"
+    >
         <fa-icon [icon]="'eye'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="entity.action.scores">Scores</span>
     </button>
     <!-- Submissions -->
     <button
         type="submit"
-        *ngIf="exercise.isAtLeastInstructor"
+        *ngIf="exercise.isAtLeastInstructor || course.isAtLeastInstructor"
         [routerLink]="['/course-management', courseId, exercise.type + '-exercises', exercise.id, 'assessment']"
         class="btn btn-primary btn-sm mr-1"
     >
@@ -16,7 +21,7 @@
     </button>
     <!-- Participations -->
     <button
-        *ngIf="exercise.isAtLeastTutor"
+        *ngIf="exercise.isAtLeastTutor || course.isAtLeastTutor"
         type="submit"
         [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'participations']"
         class="btn btn-primary btn-sm mr-1"
@@ -27,7 +32,7 @@
     <!-- Teams -->
     <button
         type="submit"
-        *ngIf="exercise.teamMode && exercise.isAtLeastTutor"
+        *ngIf="exercise.teamMode && (exercise.isAtLeastTutor || course.isAtLeastTutor)"
         [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'teams']"
         class="btn btn-primary btn-sm mr-1"
     >
@@ -36,7 +41,7 @@
     </button>
     <!-- View -->
     <button
-        *ngIf="exercise.isAtLeastTutor"
+        *ngIf="exercise.isAtLeastTutor || course.isAtLeastTutor"
         type="submit"
         [routerLink]="['/course-management', courseId, exercise.type + '-exercises', exercise.id]"
         class="btn btn-info btn-sm mr-1"
@@ -46,7 +51,7 @@
     </button>
     <!-- Edit -->
     <button
-        *ngIf="exercise.isAtLeastInstructor"
+        *ngIf="exercise.isAtLeastInstructor || course.isAtLeastInstructor"
         type="submit"
         [routerLink]="['/course-management', courseId, exercise.type + '-exercises', exercise.id, 'edit']"
         class="btn btn-primary btn-sm mr-1"
@@ -56,7 +61,7 @@
     </button>
     <!-- Delete -->
     <button
-        *ngIf="exercise.isAtLeastInstructor"
+        *ngIf="exercise.isAtLeastInstructor || course.isAtLeastInstructor"
         jhiDeleteButton
         [entityTitle]="exercise.title"
         deleteQuestion="artemisApp.exercise.delete.question"
