--- a/src/main/webapp/app/exercises/text/manage/text-exercise/text-exercise.component.html
+++ b/src/main/webapp/app/exercises/text/manage/text-exercise/text-exercise.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h4>
+    <h4 *ngIf="isInExerciseGroup == null">
         <span *ngIf="course && !showHeading">{{ course.title }} - </span><span *ngIf="textExercises && showHeading">{{ getAmountOfExercisesString(textExercises) }} </span>
         <span jhiTranslate="artemisApp.textExercise.home.title">Text Exercises</span>
         <button
@@ -15,7 +15,7 @@
             *ngIf="course && course.isAtLeastInstructor"
             id="jh-create-entity"
             class="btn btn-primary float-right jh-create-entity create-text-exercise mr-1"
-            [routerLink]="['/course-management', course.id, 'text-exercises', 'new']"
+            [routerLink]="['/course-management', courseId, 'text-exercises', 'new']"
         >
             <fa-icon [icon]="'plus'"></fa-icon>
             <span jhiTranslate="artemisApp.textExercise.home.createLabel"> Create Text Exercise </span>
@@ -30,31 +30,110 @@
                 <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="sortRows.bind(this)">
                     <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon></th>
                     <th jhiSortBy="title"><span jhiTranslate="artemisApp.exercise.title">Title</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon></th>
-                    <th jhiSortBy="releaseDate"><span jhiTranslate="artemisApp.exercise.releaseDate">Release Date</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon></th>
-                    <th jhiSortBy="dueDate"><span jhiTranslate="artemisApp.exercise.dueDate">Due Date</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon></th>
-                    <th jhiSortBy="assessmentDueDate">
+                    <th jhiSortBy="releaseDate" *ngIf="isInExerciseGroup == null">
+                        <span jhiTranslate="artemisApp.exercise.releaseDate">Release Date</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="dueDate" *ngIf="isInExerciseGroup == null">
+                        <span jhiTranslate="artemisApp.exercise.dueDate">Due Date</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <th jhiSortBy="assessmentDueDate" *ngIf="isInExerciseGroup == null">
                         <span jhiTranslate="artemisApp.exercise.assessmentDueDate">Assessment Due Date</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon>
                     </th>
                     <th jhiSortBy="maxScore"><span jhiTranslate="artemisApp.exercise.maxScore">Max Score</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon></th>
-                    <th jhiSortBy="presentationScoreEnabled" *ngIf="course.presentationScore !== 0">
+                    <th jhiSortBy="presentationScoreEnabled" *ngIf="isInExerciseGroup == null && course.presentationScore !== 0">
                         <span jhiTranslate="artemisApp.exercise.presentationScoreEnabled.title">Presentation</span>&nbsp;<fa-icon [icon]="'sort'"></fa-icon>
                     </th>
+                    <th *ngIf="isInExerciseGroup == true"><span jhitranslate="artemisApp.AssessmentMode">Assessment Mode</span></th>
                     <th></th>
                 </tr>
             </thead>
             <tbody class="markdown-preview">
                 <tr *ngFor="let textExercise of textExercises; trackBy: trackId">
                     <td>
-                        <a [routerLink]="['/course-management', course.id, 'text-exercises', textExercise.id]">{{ textExercise.id }}</a>
+                        <a [routerLink]="['/course-management', courseId, 'text-exercises', textExercise.id]">{{ textExercise.id }}</a>
                     </td>
                     <td>{{ textExercise.title }}</td>
-                    <td>{{ textExercise.releaseDate | artemisDate }}</td>
-                    <td>{{ textExercise.dueDate | artemisDate }}</td>
-                    <td>{{ textExercise.assessmentDueDate | artemisDate }}</td>
+                    <td *ngIf="isInExerciseGroup == null">{{ textExercise.releaseDate | artemisDate }}</td>
+                    <td *ngIf="isInExerciseGroup == null">{{ textExercise.dueDate | artemisDate }}</td>
+                    <td *ngIf="isInExerciseGroup == null">{{ textExercise.assessmentDueDate | artemisDate }}</td>
                     <td>{{ textExercise.maxScore }}</td>
-                    <td *ngIf="course.presentationScore !== 0">{{ textExercise.presentationScoreEnabled }}</td>
+                    <td *ngIf="isInExerciseGroup == null && course.presentationScore !== 0">{{ textExercise.presentationScoreEnabled }}</td>
+                    <td *ngIf="isInExerciseGroup == true">{{ 'artemisApp.AssessmentType.' + textExercise.assessmentType | translate }}</td>
                     <td class="text-right">
-                        <jhi-text-exercise-row-buttons [courseId]="courseId" [exercise]="textExercise"></jhi-text-exercise-row-buttons>
+                        <div class="btn-group flex-btn-group-container">
+                            <!-- Scores -->
+                            <button
+                                *ngIf="textExercise.isAtLeastTutor || course.isAtLeastTutor"
+                                type="submit"
+                                [routerLink]="['/course-management', courseId, 'exercises', textExercise.id, 'scores']"
+                                class="btn btn-info btn-sm mr-1"
+                            >
+                                <fa-icon [icon]="'eye'"></fa-icon>
+                                <span class="d-none d-md-inline" jhiTranslate="entity.action.scores">Scores</span>
+                            </button>
+                            <!-- Submissions -->
+                            <button
+                                type="submit"
+                                *ngIf="textExercise.isAtLeastInstructor || course.isAtLeastInstructor"
+                                [routerLink]="['/course-management', courseId, textExercise.type + '-exercises', textExercise.id, 'assessment']"
+                                class="btn btn-primary btn-sm mr-1"
+                            >
+                                <fa-icon [icon]="['far', 'list-alt']"></fa-icon>
+                                <span class="d-none d-md-inline" jhiTranslate="artemisApp.courseOverview.exerciseDetails.instructorActions.submissions">Submissions</span>
+                            </button>
+                            <!-- Participations -->
+                            <button
+                                *ngIf="textExercise.isAtLeastTutor || course.isAtLeastTutor"
+                                type="submit"
+                                [routerLink]="['/course-management', courseId, 'exercises', textExercise.id, 'participations']"
+                                class="btn btn-primary btn-sm mr-1"
+                            >
+                                <fa-icon [icon]="['far', 'list-alt']"></fa-icon>
+                                <span class="d-none d-md-inline" jhiTranslate="artemisApp.exercise.participations">Participations</span>
+                            </button>
+                            <!-- Teams -->
+                            <button
+                                type="submit"
+                                *ngIf="textExercise.teamMode && (textExercise.isAtLeastTutor || course.isAtLeastTutor)"
+                                [routerLink]="['/course-management', courseId, 'exercises', textExercise.id, 'teams']"
+                                class="btn btn-primary btn-sm mr-1"
+                            >
+                                <fa-icon [icon]="'users'"></fa-icon>
+                                <span class="d-none d-md-inline" jhiTranslate="artemisApp.exercise.teams">Teams</span>
+                            </button>
+                            <!-- View -->
+                            <button
+                                *ngIf="textExercise.isAtLeastTutor || course.isAtLeastTutor"
+                                type="submit"
+                                [routerLink]="['/course-management', courseId, textExercise.type + '-exercises', textExercise.id]"
+                                class="btn btn-info btn-sm mr-1"
+                            >
+                                <fa-icon [icon]="'eye'"></fa-icon>
+                                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
+                            </button>
+                            <!-- Edit -->
+                            <button
+                                *ngIf="textExercise.isAtLeastInstructor || course.isAtLeastInstructor"
+                                type="submit"
+                                [routerLink]="['/course-management', courseId, textExercise.type + '-exercises', textExercise.id, 'edit']"
+                                class="btn btn-primary btn-sm mr-1"
+                            >
+                                <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
+                            </button>
+                            <!-- Delete -->
+                            <button
+                                *ngIf="textExercise.isAtLeastInstructor || course.isAtLeastInstructor"
+                                jhiDeleteButton
+                                [entityTitle]="textExercise.title"
+                                deleteQuestion="artemisApp.exercise.delete.question"
+                                deleteConfirmationText="artemisApp.exercise.delete.typeNameToConfirm"
+                                (delete)="deleteExercise(textExercise)"
+                                [dialogError]="dialogError$"
+                            >
+                                <fa-icon [icon]="'times'"></fa-icon>
+                            </button>
+                        </div>
                     </td>
                 </tr>
             </tbody>
