add input for student view

--- a/src/main/webapp/app/exercises/programming/participate/code-editor-student-container.component.html
+++ b/src/main/webapp/app/exercises/programming/participate/code-editor-student-container.component.html
@@ -17,6 +17,7 @@
     [participation]="participation"
     [showEditorInstructions]="showEditorInstructions"
     [isTutorAssessment]="hasTutorAssessment"
+    [isStudent]="hasTutorAssessment"
 >
     <span editorTitle>{{ exercise.title }}</span>
     <div editorToolbar class="d-inline-flex">
