--- a/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/container/code-editor-container.component.html
@@ -41,6 +41,7 @@
         [commitState]="commitState"
         [editorState]="editorState"
         [feedbacks]="participation.results[0] ? participation.results[0].feedbacks : undefined"
+        [isStudent]="isStudent"
         [isTutorAssessment]="isTutorAssessment"
         (onFileContentChange)="onFileContentChange($event)"
         (onUpdateFeedback)="updateFeedback($event)"
