--- a/src/main/webapp/app/exercises/programming/shared/code-editor/ace/code-editor-ace.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/ace/code-editor-ace.component.html
@@ -27,6 +27,7 @@
                 [fileName]="selectedFile"
                 [codeLine]="i"
                 [feedback]="fileFeedbackPerLine[i]"
+                [isStudent]="isStudent"
                 (onUpdateFeedback)="updateFeedback($event)"
                 (onDeleteFeedback)="deleteFeedback($event)"
                 (onCancelFeedback)="cancelFeedback($event)"
