fix issues when for complaints and use readOnly form code-editor-tutor.component

--- a/src/main/webapp/app/exercises/programming/participate/code-editor-student-container.component.html
+++ b/src/main/webapp/app/exercises/programming/participate/code-editor-student-container.component.html
@@ -17,7 +17,7 @@
     [participation]="participation"
     [showEditorInstructions]="showEditorInstructions"
     [isTutorAssessment]="hasTutorAssessment"
-    [isStudent]="hasTutorAssessment"
+    [readOnlyManualFeedback]="true"
 >
     <span editorTitle>{{ exercise.title }}</span>
     <div editorToolbar class="d-inline-flex">
