--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-inline-feedback.component.html
@@ -6,14 +6,14 @@
     [class.alert-warning]="feedback.credits === 0"
 >
     <div class="m-2">
-        <div *ngIf="!readOnly; else readOnlyFeedback" class="form-row align-items-start">
+        <div *ngIf="!editOnly; else readOnlyFeedback" class="form-row align-items-start">
             <div class="form-group col-8" [style.max-width]="'500px'">
                 <label jhiTranslate="artemisApp.assessment.detail.feedback"></label>
-                <textarea class="form-control" rows="5" [(ngModel)]="feedback.detailText" [readOnly]="readOnly"></textarea>
+                <textarea class="form-control" rows="5" [(ngModel)]="feedback.detailText" [readOnly]="editOnly"></textarea>
             </div>
             <div class="form-group col-2" [style.max-width]="'100px'">
                 <label jhiTranslate="artemisApp.exercise.score"></label>
-                <input class="form-control" type="number" step="0.5" [(ngModel)]="feedback.credits" [readOnly]="readOnly" />
+                <input class="form-control" type="number" step="0.5" [(ngModel)]="feedback.credits" [readOnly]="editOnly" />
             </div>
             <div *ngIf="feedback.type === MANUAL" class="form-group col-2">
                 <button type="submit" (click)="deleteFeedback()" class="btn btn-danger btn-sm mr-1">
@@ -21,7 +21,7 @@
                 </button>
             </div>
         </div>
-        <div *ngIf="!readOnly">
+        <div *ngIf="!editOnly">
             <button type="button" class="btn btn-secondary btn-sm" (click)="cancelFeedback()">
                 <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
             </button>
@@ -42,7 +42,7 @@
                 </h5>
                 <h6 class="d-inline">Tutor Comment:</h6>
             </div>
-            <div *ngIf="!isStudent" class="col d-flex justify-content-end">
+            <div *ngIf="!readOnly" class="col d-flex justify-content-end">
                 <button type="submit" (click)="editFeedback(codeLine)" class="btn btn-primary btn-sm">
                     <fa-icon [icon]="'pencil-alt'"></fa-icon> <span jhiTranslate="entity.action.edit">Edit</span>
                 </button>
