fix wrong input and code improvements

--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-display-code.component.html
@@ -31,7 +31,7 @@
                                 [fileName]="selectedFile"
                                 [codeLine]="i"
                                 [feedback]="fileFeedbackPerLine[i]"
-                                [isStudent]="isStudent"
+                                [readOnly]="isStudent"
                                 (onCancelFeedback)="onCancelFeedback()"
                                 (onUpdateFeedback)="updateFeedback($event)"
                                 (onDeleteFeedback)="deleteFeedback($event)"
