--- a/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-header/plagiarism-header.component.scss
+++ b/src/main/webapp/app/exercises/shared/plagiarism/plagiarism-header/plagiarism-header.component.scss
@@ -11,6 +11,10 @@
         margin-bottom: 0;
     }
 
+    .plagiarism-warning {
+        color: darken($body-bg, 20);
+    }
+
     &-right {
         display: flex;
         align-items: center;
