--- a/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
+++ b/src/main/webapp/app/exercises/programming/assess/code-editor-tutor-assessment-container.component.html
@@ -77,16 +77,15 @@
                 jhiTranslate="artemisApp.tutorExerciseDashboard.programmingExercise.goToRepo"
                 >Go to repository</a
             >
-            <jhi-result
+            <jhi-updating-result
                 *ngIf="participationForManualResult"
-                [result]="manualResult"
+                [exercise]="exercise"
                 [showUngradedResults]="true"
                 [showGradedBadge]="true"
-                [isBuilding]="false"
                 [participation]="participationForManualResult"
                 [short]="true"
                 class="mr-1"
-            ></jhi-result>
+            ></jhi-updating-result>
             <span jhiTranslate="artemisApp.result.manualResult">Manual Result</span>
             <span class="badge badge-primary ml-2" [style.fontSize]="'inherit'">
                 <jhi-score-display [score]="totalScore" [maxScore]="exercise.maxScore"></jhi-score-display>
